fix navbar so it will generate toggle button on small screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,9 +50,6 @@ body {
 		letter-spacing: -1px;
 		font-weight: bold;
 		font-size: 25px;
-		a {
-			color: $red;
-		}
 	}
 }
 #profile_title {
